Integration Test (Fix)