@@ -38,6 +38,10 @@
     <!-- Set Java version to 11 -->
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <!-- Add JVM memory settings for Maven -->
+    <argLine>-Xmx2g -XX:MaxPermSize=512m</argLine>
+    <!-- Add JVM memory settings for Surefire Plugin -->
+    <surefireArgLine>-Xmx2g</surefireArgLine>
   </properties>
 
   <build>
@@ -67,9 +71,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version> <!-- Updated version to ensure compatibility -->
+        <version>3.0.0</version> <!-- Updated version to ensure compatibility -->
         <configuration>
           <forkCount>0</forkCount>
+          <argLine>${surefireArgLine}</argLine>
         </configuration>
         <dependencies>
           <!-- JUnit Jupiter Engine -->
